# simple-server

backend/: Dockerfile  pyproject.toml
ff-backend/: pyproject.toml  server.py
ff-backend/app/: main.py
ff-backend/app/templates/: index.html
