[tool.poetry]
name = "simple-server"
version = "0.1.0"
description = ""
authors = ["jinheonyoon <yjinheon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.68.1"
uvicorn = "^0.29.0"
aiofiles = "^23.2.1"
jinja2 = "3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
